# mqtt-neo4j-streaming-m1

./: #.gitignore#  .#.gitignore  .gitignore  README.md  pyproject.toml
diagram/: architecture-1.key
images/: sender-1.py  sender-3.mov
kafka-connect-neo4j/: Dockerfile
manifests/kafka/: deployment.yaml  service.yaml
manifests/kafka-connect-mqtt/: deployment.yaml  service.yaml
manifests/mosquitto/: local-values.yaml
manifests/mosquitto/mosquitto/templates/: deployment.yaml
scripts/: deploy-mqtt-source.sh  deploy-neo4j-sink.sh
